alignment issue is fixed.

--- a/src/components/QuickQueries.scss
+++ b/src/components/QuickQueries.scss
@@ -7,7 +7,7 @@
         width: 10px;
     }
     .quick-link{
-        font-size: 18px;
+        font-size: 14px;
         font-weight: bold;
         cursor: pointer;
         margin-left: 15px;
